umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@marvin_triglyceride.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 16, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 16, col 0"
extended_molecule:
  success: false
  error:
    error_type: DuplicateProperty
    message: "Duplicate property: RGroup label conflict: atom 12 already has RGroup label 1, cannot set 2"
extended_molecule_lenient:
  success: false
  error:
    error_type: DuplicateProperty
    message: "Duplicate property: RGroup label conflict: atom 12 already has RGroup label 1, cannot set 2"
